--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-437.0KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20160, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.47MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.89MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
-  - {name: 🇯🇵 日本-365.2KB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.64MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.07MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇫🇷 法国-339.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇸🇬 新加坡-3.20MB/s(Youtube:不良林), server: 139.162.45.81, port: 13236, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
