--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-2.89MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
-  - {name: 🇭🇰 香港-1.64MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇸🇬 新加坡-3.20MB/s(Youtube:不良林), server: 139.162.45.81, port: 13236, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇮🇳 印度-1.20MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.60MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇭🇰 香港-799.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 台湾-7.32MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.01MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.09MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-2.89MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.20MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
