--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,118 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.60MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-799.2KB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇨🇳 台湾-7.32MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-8.01MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-811.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-589.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-6.25MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-967.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.09MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-385.9KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-799.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.32MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
