--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-811.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇫🇷 法国-589.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-6.25MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-967.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-6.61MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.09MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.94MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.60MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-385.9KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇭🇰 香港-4.58MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-425.3KB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.25MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-967.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-940.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
+      - 🇻🇳 越南-425.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
